@@ -72,6 +72,7 @@ public class NetworkLink extends Resource {
   
   /**
     * @param value The new bandwidth
+    * @param date When to change the bandwidth
     */
   public void updateBandwidth(double value) {
     SurfJNI.NetworkLink_updateBandwidth__SWIG_1(swigCPtr, this, value);
@@ -97,6 +98,7 @@ public class NetworkLink extends Resource {
   
   /**
     * @param value The new latency
+    * @param date When to change the latency
     */
   public void updateLatency(double value) {
     SurfJNI.NetworkLink_updateLatency__SWIG_1(swigCPtr, this, value);
